add artists routes params on swagger
